--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
     <section class="container not-connected">
       <div>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Project!</h1>
         <p id="welcomeP">
           The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
         </p>
@@ -97,16 +97,8 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of cute cats will be available very soon!
+          A new batch of Chicago Pizza RDD tokens will be baked up very soon!
         </p>
-        <a
-          id="actionButton"
-          href="https://discord.gg/A9CnsVzzkZ"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
-        </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
             <div>
