--- a/frontend/index.html
+++ b/frontend/index.html
@@ -139,14 +139,14 @@
       <div class="minted-container card show-card hidden">
         <h1>🎉</h1>
         <h2>Minted!</h2>
-        <p>Here's your trasaction link:</p>
+        <p>Here's your transaction link:</p>
         <a id="mintedTxnBtn" href="" target="_blank" rel="noopener noreferrer">
           <button class="hero-btn btn">View Transaction</button>
         </a>
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/ChicagoPizzaRDD"
+          href="https://testnets.opensea.io/assets/chicagopizzardd"
           target="_blank"
           rel="noopener noreferrer"
         >
