action button restore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,6 +99,14 @@
         <p id="mainText">
           A new batch of Chicago Pizza RDD tokens will be baked up very soon!
         </p>
+        <a
+          id="actionButton"
+          href="https://realdeepdish.com/nft"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="hero-btn btn"
+          ><span>Check RDD NFT For Upcoming Token Releases!</span>
+        </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
             <div>
