--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,7 +64,7 @@
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Project</h1>
         <p id="welcomeP">
-          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develop and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
+          The ChicagoPizzaRDD NFT Project is a decentralized, project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
         </p>
       </div>
     </section>
@@ -111,15 +111,15 @@
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">100</p>
+              <p id="totalSupply">500</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">1 ETH</p>
+              <p id="pricePerMint">15 MATIC (Polygon)</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">5 per wallet</p>
+              <p id="maxPerMint">20 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
