front end things

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="logo">
           <a href="/">
-            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+            <img src="images/x-icon/android-chrome-96x96.png" alt="logo" />
           </a>
         </div>
         <div class="menu">
@@ -43,14 +43,14 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/twitter.webp" alt="Twitter" />
+            <img src="images/header/twitter.png" alt="Twitter" />
           </a>
           <a
             href="https://realdeepdish.netlify.app"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.webp" alt="Opensea" />
+            <img src="images/header/opensea.png" alt="Opensea" />
           </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
@@ -58,11 +58,11 @@
         </div>
       </div>
     </header>
-
+<div><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
     <section class="container not-connected">
       <div>
-        <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Project</h1>
+        <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <p id="welcomeP">
           The ChicagoPizzaRDD NFT Project is a decentralized, project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
         </p>
