more frond end hoo hah!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,18 +50,25 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.png" alt="Opensea" />
+            <img src="images/header/opensea.png" alt="NFT Page on RealDeepDish.com" />
           </a>
+          <a
+          href="https://realdeepdish.com/nft"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="images/header/RDD-PIZZA-LOGO-ico-32-256.gif" alt="Opensea" />
+        </a>
           <button class="wallet-btn btn" id="connectWallet">
             <span>Connect Wallet</span>
           </button>
         </div>
       </div>
     </header>
-<div><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
+<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
     <section class="container not-connected">
       <div>
-        <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Project</h1>
+        <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
         <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
         <p id="welcomeP">
           The ChicagoPizzaRDD NFT Project is a decentralized, project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
@@ -119,7 +126,7 @@
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">20 per wallet</p>
+              <p id="maxPerMint">20 per minting</p>
             </div>
           </div>
           <div class="mint-qty">
@@ -154,7 +161,7 @@
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://testnets.opensea.io/collection/chicagopizzardd"
+          href="https://opensea.io/assets/chicagopizzardd?search[resultModel]=ASSETS&search[sortAscending]=false&search[sortBy]=CREATED_DATE"
           target="_blank"
           rel="noopener noreferrer"
         >
