--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </header>
-<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
+<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
     <section class="container not-connected">
       <div>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
