--- a/frontend/index.html
+++ b/frontend/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
     </header>
-<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
+<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
     <section class="container not-connected">
       <div>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
@@ -170,7 +170,7 @@
       </div>
     </section>
 
-    <!-- <div id="spinner" class="dot-spin"></div> -->
+   <div id="spinner" class="dot-spin"><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
 
     <div class="splide">
       <div class="splide__track">
