--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,11 +31,12 @@
   </head>
   <body>
     <header>
+      <div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
       <div class="container">
         <div class="logo">
           <a href="/">
             <img src="images/x-icon/android-chrome-96x96.png" alt="logo" />
-          </a><h1>>ChicagoPizzaRDD NFT Bakery</h1>
+          </a>
         </div>
         <div class="menu">
           <a
@@ -65,7 +66,7 @@
         </div>
       </div>
     </header>
-<div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div>
+
     <section class="container not-connected">
       <div>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
@@ -132,9 +133,6 @@
             </div>
           </div>
           <div class="mint-qty">
-
-            <div style="width: 300px; height:220px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; block-size:220px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #262B38;padding:1px;padding: 0px; margin: 0px;"><div style="height:200px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=single_v2&theme=dark&coin_id=1510954&pref_coin_id=1505" width="300" height="196px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;"></iframe></div><div style="color: #626B7F; line-height: 14px; font-weight: 400; font-size: 11px; box-sizing: border-box; padding: 2px 6px; width: 100%; font-family: Verdana, Tahoma, Arial, sans-serif;"><a href="https://coinlib.io" target="_blank" style="font-weight: 500; color: #626B7F; text-decoration:none; font-size:11px">Cryptocurrency Prices</a>&nbsp;by Coinlib</div></div>
-
             <span>
               <button class="input-number-decrement btn" id="mintDecrement">–</button>
               <input
@@ -152,7 +150,8 @@
           <div class="total-price-container">
             <h3>Total</h3>
             <p id="totalPrice">.001 ETH</p>
-          </div>
+          </div><div></div>
+          <div style="width: 300px; height:220px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; block-size:220px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #262B38;padding:1px;padding: 0px; margin: 0px;"><div style="height:200px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=single_v2&theme=dark&coin_id=1510954&pref_coin_id=1505" width="300" height="196px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;"></iframe></div><div style="color: #626B7F; line-height: 14px; font-weight: 400; font-size: 11px; box-sizing: border-box; padding: 2px 6px; width: 100%; font-family: Verdana, Tahoma, Arial, sans-serif;"><a href="https://coinlib.io" target="_blank" style="font-weight: 500; color: #626B7F; text-decoration:none; font-size:11px">Cryptocurrency Prices</a>&nbsp;by Coinlib</div></div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
         </div>
       </div>
