--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,18 +51,16 @@
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.png" alt="NFT Page on RealDeepDish.com" />
+            <img src="images/header/opensea.png" alt="ChicagoPizzaRDD on OpenSea" />
           </a>
           <a
-          href="https://realdeepdish.com/nft"
+          href="https://opensea.io/collection/chicagopizzardd"
           target="_blank"
           rel="noopener noreferrer"
         >
           <img src="images/header/RDD-PIZZA-LOGO-ico-32-256.gif" alt="Opensea" />
         </a>
-          <button class="wallet-btn btn" id="connectWallet">
-            <span>Connect Wallet</span>
-          </button>
+          <button class="wallet-btn btn" id="connectWallet">Connect MetaMask</button>
         </div>
       </div>
     </header>
