hitting the spinner code with a hammer

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-   <div id="spinner" class="dot-spin"><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
+<!-- where the spinner code USED to be -->
 
     <div class="splide">
       <div class="splide__track">
@@ -207,6 +207,8 @@
         </ul>
       </div>
     </div>
+
+<div id="spinner" class="dot-spin"><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
 
     <script src="js/metamask-onboarding.bundle.js"></script>
     <script src="js/web3.min.js"></script>
