--- a/frontend/index-20220403-821pm.html
+++ b/frontend/index-20220403-821pm.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <div style="text-align: center; text-shadow: 1px 1px 4px #ffee00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
+      <div style="text-align: center; text-shadow: 2px 2px 5px #bbff00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
       <div class="container">
         <div class="logo">
           <a href="/">
