button, button, who's got the button?

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,13 +64,14 @@
         </div>
       </div>
     </header>
-
+<div><div style="text-align:center;"><img style="width: 270px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div></div>
     <section class="container not-connected">
       <div>
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
-        <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
-        <p id="welcomeP">
-          The ChicagoPizzaRDD NFT Project is a decentralized, project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
+        <h2 id="welcomeH2">Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2>
+        <p>Get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></p>
+        <p>
+          The ChicagoPizzaRDD NFT Project is a decentralized project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
         </p>
       </div>
     </section>
@@ -114,8 +115,6 @@
           ><span>Check RDD NFT For Upcoming Token Releases!</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
-
-  <div style="text-align:center;"><img style="width: 270px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div>
           <div class="info-container">
             <div>
               <h3>Supply</h3>
