--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header>
-      <div style="text-align: center; text-shadow: 1px 1px 4px #ffee00;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
+      <div style="text-align: center; text-shadow: -1px -1px 2px #ff8800;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
       <div class="container">
         <div class="logo">
           <a href="/">
