--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,13 +31,11 @@
   </head>
   <body>
     <header>
-      <div style="text-align: center; text-shadow: -1px -1px 2px #ff8800;"><h1 id="welcomeH1">ChicagoPizzaRDD NFT Bakery</h1></div><div></div>
+      <div style="text-align: center; text-shadow: -1px -1px 2px #ff8800;"></div><div></div>
       <div class="container">
-        <div class="logo">
-          <a href="/">
-            <img src="images/x-icon/android-chrome-96x96.png" alt="logo" />
-          </a>
-        </div>
+        <div class="logo"> </div>
+        <h1>ChicagoPizzaRDD NFT Bakery</h1>
+        <a href="/"> <img src="images/x-icon/android-chrome-96x96.png" alt="logo" /> </a>
         <div class="menu">
           <a
             href="https://twitter.com/rddpizza"
@@ -66,7 +64,7 @@
     </header>
 <div><div style="text-align:center;"><img style="width: 270px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div></div>
     <section class="container not-connected">
-      <div>
+      <div class="not-connected">
         <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
         <h2 id="welcomeH2">Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2>
         <p>Get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></p>
