slidin and spinnin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,15 +58,18 @@
         >
           <img src="images/header/RDD-PIZZA-LOGO-ico-32-256.gif" alt="Opensea" />
         </a>
+			
           <button class="wallet-btn btn" id="connectWallet">Connect MetaMask</button>
         </div>
       </div>
     </header>
-<div><div style="text-align:center;"><img style="width: 270px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div></div>
-    <section class="container not-connected">
+
+<div style="text-align:right;"><img style="width: 270px; padding: 10px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div>
+		
+  <section class="container not-connected">
       <div class="not-connected">
-        <h1 id="welcomeH1">Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
-        <h2 id="welcomeH2">Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2>
+        <h1>Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
+        <h2>Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2>
         <p>Get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></p>
         <p>
           The ChicagoPizzaRDD NFT Project is a decentralized project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
@@ -170,8 +173,8 @@
     </section>
 
 <!-- where the spinner code USED to be -->
-
-    <div class="splide">
+<!-- where the splide USED to be -->
+<div class="splide">
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
@@ -203,11 +206,11 @@
           </li>
         </ul>
       </div>
-    </div>
-
-<div id="spinner" class="dot-spin"><h2 id="welcomeH2">Connect to MetaMask to Get Started</h2></div>
-
-    <script src="js/metamask-onboarding.bundle.js"></script>
+    </div>	
+	  
+	<div id="spinner" class="dot-spin"></div>
+	  
+  <script src="js/metamask-onboarding.bundle.js"></script>
     <script src="js/web3.min.js"></script>
     <script src="js/splide.min.js"></script>
     <script src="js/constants.js"></script>
