--- a/frontend/index-20220404-1139am.html
+++ b/frontend/index-20220404-1139am.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <header>
+      <div style="text-align: center; text-shadow: -1px -1px 2px #ff8800;"></div><div></div>
       <div class="container">
         <div class="logo"> </div>
         <h1>ChicagoPizzaRDD NFT Bakery</h1>
@@ -172,7 +173,6 @@
     </section>
 
 <!-- where the spinner code USED to be -->
-<div id="spinner" class="dot-spin"></div>
 <!-- where the splide USED to be -->
 <div class="splide">
       <div class="splide__track">
@@ -207,7 +207,9 @@
         </ul>
       </div>
     </div>	
-
+	  
+	<div id="spinner" class="dot-spin"></div>
+	  
   <script src="js/metamask-onboarding.bundle.js"></script>
     <script src="js/web3.min.js"></script>
     <script src="js/splide.min.js"></script>
