--- a/frontend/indexMintDapp.html
+++ b/frontend/indexMintDapp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ChicagoPizzaRDD</title>
+    <title>CodeCats</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,46 +32,46 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo"> </div>
-        <h1>ChicagoPizzaRDD NFT Bakery</h1>
-        <a href="/"> <img src="images/x-icon/android-chrome-96x96.png" alt="logo" /> </a>
+        <div class="logo">
+          <a href="/">
+            <img src="images/x-icon/favicon-32x32.png" alt="logo" />
+          </a>
+        </div>
         <div class="menu">
           <a
-            href="https://twitter.com/rddpizza"
+            href="https://discord.gg/A9CnsVzzkZ"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/twitter.png" alt="Twitter" />
+            <img src="images/header/discord.webp" alt="Discord" />
           </a>
           <a
-            href="https://realdeepdish.netlify.app"
+            href="https://twitter.com/codeSTACKr"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="images/header/opensea.png" alt="ChicagoPizzaRDD on OpenSea" />
+            <img src="images/header/twitter.webp" alt="Twitter" />
           </a>
           <a
-          href="https://opensea.io/collection/chicagopizzardd"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img src="images/header/RDD-PIZZA-LOGO-ico-32-256.gif" alt="Opensea" />
-        </a>
-			
-          <button class="wallet-btn btn" id="connectWallet">Connect MetaMask</button>
+            href="https://opensea.io/collection/codecats"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img src="images/header/opensea.webp" alt="Opensea" />
+          </a>
+          <button class="wallet-btn btn" id="connectWallet">
+            <span>Connect Wallet</span>
+          </button>
         </div>
       </div>
     </header>
 
-<div style="text-align:right;"><img style="width: 270px; padding: 10px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div>
-		
-  <section class="container not-connected">
-      <div class="not-connected">
-        <h1>Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
-        <h2>Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2>
-        <p>Get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></p>
-        <p>
-          The ChicagoPizzaRDD NFT Project is a decentralized project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
+    <section class="container not-connected">
+      <div>
+        <h2 id="welcomeH2">Connect to MetaMask to Get Started</h2>
+        <h1 id="welcomeH1">Welcome to the CodeCats NFT Project!</h1>
+        <p id="welcomeP">
+          The CodeCats NFT Project is a decentralized, open-source project that aims to demonstrate how to develope and launch your own NFT Collection. Follow step by step on the <a href="https://youtube.com/codestackr"  target="_blank" rel="noopener noreferrer">codeSTACKr</a> YouTube channel.
         </p>
       </div>
     </section>
@@ -104,29 +104,29 @@
         </div>
         <h1 id="mainHeading">NFT Drop Coming Soon!!</h1>
         <p id="mainText">
-          A new batch of Chicago Pizza RDD tokens will be baked up very soon!
+          A new batch of cute cats will be available very soon!
         </p>
         <a
           id="actionButton"
-          href="https://realdeepdish.com/nft"
+          href="https://discord.gg/A9CnsVzzkZ"
           target="_blank"
           rel="noopener noreferrer"
           class="hero-btn btn"
-          ><span>Check RDD NFT For Upcoming Token Releases!</span>
+          ><span>Join the Catmmunity</span>
         </a>
         <div id="mintContainer" class="mint-container hidden">
           <div class="info-container">
             <div>
               <h3>Supply</h3>
-              <p id="totalSupply">500</p>
+              <p id="totalSupply">100</p>
             </div>
             <div>
               <h3>Price Per Mint</h3>
-              <p id="pricePerMint">15 MATIC (Polygon)</p>
+              <p id="pricePerMint">1 ETH</p>
             </div>
             <div>
               <h3>Max</h3>
-              <p id="maxPerMint">20 per minting</p>
+              <p id="maxPerMint">5 per wallet</p>
             </div>
           </div>
           <div class="mint-qty">
@@ -147,22 +147,21 @@
           <div class="total-price-container">
             <h3>Total</h3>
             <p id="totalPrice">.001 ETH</p>
-          </div><div></div>
-          <!-- <div style="width: 300px; height:220px; background-color: #1D2330; overflow:hidden; box-sizing: border-box; border: 1px solid #282E3B; border-radius: 4px; text-align: right; line-height:14px; block-size:220px; font-size: 12px; font-feature-settings: normal; text-size-adjust: 100%; box-shadow: inset 0 -20px 0 0 #262B38;padding:1px;padding: 0px; margin: 0px;"><div style="height:200px; padding:0px; margin:0px; width: 100%;"><iframe src="https://widget.coinlib.io/widget?type=single_v2&theme=dark&coin_id=1510954&pref_coin_id=1505" width="300" height="196px" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;line-height:14px;"></iframe></div><div style="color: #626B7F; line-height: 14px; font-weight: 400; font-size: 11px; box-sizing: border-box; padding: 2px 6px; width: 100%; font-family: Verdana, Tahoma, Arial, sans-serif;"><a href="https://coinlib.io" target="_blank" style="font-weight: 500; color: #626B7F; text-decoration:none; font-size:11px">Cryptocurrency Prices</a>&nbsp;by Coinlib</div></div> -->
+          </div>
           <button id="mintButton" class="hero-btn btn mint-btn">Mint</button>
         </div>
       </div>
       <div class="minted-container card show-card hidden">
         <h1>🎉</h1>
         <h2>Minted!</h2>
-        <p>Here's your transaction link:</p>
+        <p>Here's your trasaction link:</p>
         <a id="mintedTxnBtn" href="" target="_blank" rel="noopener noreferrer">
           <button class="hero-btn btn">View Transaction</button>
         </a>
         <p>View it in the collection:</p>
         <a
           id="mintedLinkBtn"
-          href="https://opensea.io/assets/chicagopizzardd?search[resultModel]=ASSETS&search[sortAscending]=false&search[sortBy]=CREATED_DATE"
+          href="https://testnets.opensea.io/collection/teststackr-collection"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -171,10 +170,9 @@
       </div>
     </section>
 
-<!-- where the spinner code USED to be -->
-<div id="spinner" class="dot-spin"></div>
-<!-- where the splide USED to be -->
-<div class="splide">
+    <div id="spinner" class="dot-spin"></div>
+
+    <div class="splide">
       <div class="splide__track">
         <ul class="splide__list">
           <li class="splide__slide">
@@ -206,9 +204,9 @@
           </li>
         </ul>
       </div>
-    </div>	
+    </div>
 
-  <script src="js/metamask-onboarding.bundle.js"></script>
+    <script src="js/metamask-onboarding.bundle.js"></script>
     <script src="js/web3.min.js"></script>
     <script src="js/splide.min.js"></script>
     <script src="js/constants.js"></script>
@@ -216,3 +214,16 @@
     <script src="js/app.js"></script>
   </body>
 </html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Loading complete
