Holy Sizzle! It's Working!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
       </div>
     </header>
 
-<div style="text-align:right;"><img style="width: 270px; padding: 10px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div>
+<!-- <div style="text-align:right; z-index:-1; position:absolute; position-top: 10px; position-right: 10px;"><img style="width: 200px; padding: 10px;" src="https://ipfs.io/ipfs/bafybeiezk5mtswsa3yknh3572tdxpjhgrsokxqt4oz4lo3af7ggj5g6p3u"></div> -->
 		
   <section class="container not-connected">
       <div class="not-connected">
