word wrap is a thing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,9 +76,9 @@
       <div class="not-connected">
         <h1>Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
         <h2>Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2><br/>
-        <h3>If the CONNECT METAMASK button at the top of the page isn't working,<br/> you can get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></h3>
+        <h2>If the CONNECT METAMASK button at the top of the page isn't working,<br/> you can get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></h2>
         <p>
-          The ChicagoPizzaRDD NFT Project is a decentralized project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
+          The ChicagoPizzaRDD NFT Project is a project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
         </p>
       </div>
     </section>
