--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <div class="headerthing">
         <div class="logo"> </div>
         <h1>ChicagoPizzaRDD NFT Bakery</h1>
         <a href="/"> <img src="images/x-icon/android-chrome-96x96.png" alt="logo" /> </a>
