fixing royaly info

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,11 +75,29 @@
   <section class="container not-connected">
       <div class="not-connected">
         <h1>Welcome to the ChicagoPizzaRDD NFT Bakery</h1>
-        <h2>Connect to <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> to Get Started</h2><br/>
-        <h2>If the CONNECT METAMASK button at the top of the page isn't working,<br/> you can get the MetaMask crypto wallet extension at <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">https://metamask.io/download/</a></h2>
-        <p>
-          The ChicagoPizzaRDD NFT Project is a project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
+
+        <p>The ChicagoPizzaRDD NFT Project is a project that aims to add more Chicago Pizza awareness to the NFT Collecting Community. Check <a href="https://www.realdeepdish.com/nft"  target="_blank" rel="noopener noreferrer">RealDeepDish.com/nft</a> for info on current and upcoming tokens being baked in our blockchain ovens.
         </p>
+        <h2>To get started:</h2><br/>
+        <h3>DESKTOP/LAPTOP USERS: Press the "Install MetaMask!" button or go to <br/>
+          <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">metamask.io/download</a> <br/>
+          to install the extension in your browser. </h3><br/>
+        <p>Then press the Connect button to connect your MetaMask wallet. </p><br/>
+        <br/>
+        <h3>MOBILE USERS: </h3>
+        <h2>If you are on a mobile device, you will first need to install the <br/>
+          <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> mobile wallet app.</h2>
+        <br/>
+        <p>Set up your wallet (In the US, you need to verify your identity), <a href="https://docs.polygon.technology/docs/develop/metamask/config-polygon-on-metamask/">add the Polygon Mainnet network</a>, and load up some Polygon/MATIC tokens in there. <br/> 
+        Then, open this webpage, which is <strong>realdeepdish.netlify.app</strong> INSIDE the MetaMask browser. <br/>
+        HOW DO I OPEN A WEB BROWSER INSIDE METAMASK APP?<br/>  
+        On the top left of the MetaMask screen, you will see 3 horizontal lines (aka the hamburger). Press that, then select BROWSER.<br/>
+        Then either type in <strong>realdeepdish.netlify.app</strong> in the homepage search bar. If you see "no open tabs" then press the + (plus) to open one first. OKAY, I GOT THIS PAGE LOADED; NOW WHAT? <br/>
+        Press the "connect" button, then go to the 3 dots (on the bottom right) and RELOAD the page to get the minting interface up. Then you should be able to try minting.</p>
+      <h2>For the first token series, you'll need at least 15 MATIC per token, not including <a href="https://www.google.com/search?q=what+are+nft+gas+fees%3F&oq=what+are+nft+gas+fees" title="What are gas fees? - via Lougle" target="_blank" rel="noopener noreferrer">'gas fees'</a>, which you're going to see a lot when making transactions on blockchain networks. </h2><br/>
+      WHERE DO I BUY Polygon MATIC? <br/>
+        
+      <h3>In the future, I'll try to release some cheaper, less rare versions if you want to start collecting tokens like baseball cards.</h3>
       </div>
     </section>
 
