--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,12 +88,17 @@
         <h2>If you are on a mobile device, you will first need to install the <br/>
           <a href="https://metamask.io/download/" target="_blank" rel="noopener noreferrer">MetaMask</a> mobile wallet app.</h2>
         <br/>
-        <p>Set up your wallet (In the US, you need to verify your identity), <a href="https://docs.polygon.technology/docs/develop/metamask/config-polygon-on-metamask/">add the Polygon Mainnet network</a>, and load up some Polygon/MATIC tokens in there. <br/> 
+        <p>Set up your wallet (In the US, you may need to go through some extra steps), <br/>
+          <a href="https://docs.polygon.technology/docs/develop/metamask/config-polygon-on-metamask/">add (or switch to) the Polygon Mainnet network</a>, <br/>
+          and load up some Polygon/MATIC tokens in there. <br/> 
         Then, open this webpage, which is <strong>realdeepdish.netlify.app</strong> INSIDE the MetaMask browser. <br/>
+        <br/>
         HOW DO I OPEN A WEB BROWSER INSIDE METAMASK APP?<br/>  
         On the top left of the MetaMask screen, you will see 3 horizontal lines (aka the hamburger). Press that, then select BROWSER.<br/>
-        Then either type in <strong>realdeepdish.netlify.app</strong> in the homepage search bar. If you see "no open tabs" then press the + (plus) to open one first. OKAY, I GOT THIS PAGE LOADED; NOW WHAT? <br/>
-        Press the "connect" button, then go to the 3 dots (on the bottom right) and RELOAD the page to get the minting interface up. Then you should be able to try minting.</p>
+        Then either type in <strong>realdeepdish.netlify.app</strong> in the homepage search bar. If you see "no open tabs" then press the + (plus) to open one first. <br/>
+        <br/>
+        OKAY, I GOT THIS PAGE LOADED; NOW WHAT? <br/>
+        Press the "Connect" button, then  go to the 3 dots (on the bottom right) and RELOAD the page to get the minting interface up. Then you should be able to try minting.</p>
       <h2>For the first token series, you'll need at least 15 MATIC per token, not including <a href="https://www.google.com/search?q=what+are+nft+gas+fees%3F&oq=what+are+nft+gas+fees" title="What are gas fees? - via Lougle" target="_blank" rel="noopener noreferrer">'gas fees'</a>, which you're going to see a lot when making transactions on blockchain networks. </h2><br/>
       WHERE DO I BUY Polygon MATIC? <br/>
         
