--- a/frontend/index.html
+++ b/frontend/index.html
@@ -100,8 +100,8 @@
         OKAY, I GOT THIS PAGE LOADED; NOW WHAT? <br/>
         Press the "Connect" button, then  go to the 3 dots (on the bottom right) and RELOAD the page to get the minting interface up. Then you should be able to try minting.</p>
       <h2>For the first token series, you'll need at least 15 MATIC per token, not including <a href="https://www.google.com/search?q=what+are+nft+gas+fees%3F&oq=what+are+nft+gas+fees" title="What are gas fees? - via Lougle" target="_blank" rel="noopener noreferrer">'gas fees'</a>, which you're going to see a lot when making transactions on blockchain networks. </h2><br/>
-      WHERE DO I BUY Polygon MATIC? <br/>
-        
+      <p>WHERE DO I BUY Polygon MATIC? <br/>
+      MetaMask has a way to purchase MATIC tokens in the app. You might find tokens with less fees at places like MoonPay.com</div>p>  
       <h3>In the future, I'll try to release some cheaper, less rare versions if you want to start collecting tokens like baseball cards.</h3>
       </div>
     </section>
